@@ -1,15 +1,15 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/alloc.c,v $
- * $Date: 2003/04/05 12:16:34 $
- * $Revision: 1.6 $
+ * $Date: 2003/09/30 17:43:47 $
+ * $Revision: 1.7 $
  * $State: Exp $
  * $Author: alex $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: alloc.c,v 1.6 2003/04/05 12:16:34 alex Exp $";
+static const char rcs_id[] = "$Id: alloc.c,v 1.7 2003/09/30 17:43:47 alex Exp $";
 #endif
 
 /* #define DEBUG 1 */
@@ -2955,7 +2955,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
   char*           old_end;        /* its end address */
 
   long            size;           /* arg to first MORECORE or mmap call */
-  char*           brk;            /* return value from MORECORE */
+  char*           fst_brk;        /* return value from MORECORE */
 
   long            correction;     /* arg to 2nd MORECORE call */
   char*           snd_brk;        /* 2nd return val */
@@ -3062,7 +3062,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
   old_size = chunksize(old_top);
   old_end  = (char*)(chunk_at_offset(old_top, old_size));
 
-  brk = snd_brk = (char*)(MORECORE_FAILURE);
+  fst_brk = snd_brk = (char*)(MORECORE_FAILURE);
 
   /*
      If not the first time through, we require old_size to be
@@ -3110,7 +3110,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
   */
 
   if (size > 0)
-    brk = (char*)(MORECORE(size));
+    fst_brk = (char*)(MORECORE(size));
 
   /*
     If have mmap, try using it as a backup when MORECORE fails or
@@ -3122,7 +3122,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
   */
 
 #if HAVE_MMAP
-  if (brk == (char*)(MORECORE_FAILURE)) {
+  if (fst_brk == (char*)(MORECORE_FAILURE)) {
 
     /* Cannot merge with old top, so add its size back in */
     if (contiguous(av))
@@ -3135,12 +3135,12 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
     /* Don't try if size wraps around 0 */
     if ((CHUNK_SIZE_T)(size) > (CHUNK_SIZE_T)(nb)) {
 
-      brk = (char*)(MMAP(0, size, PROT_READ|PROT_WRITE, MAP_PRIVATE));
+      fst_brk = (char*)(MMAP(0, size, PROT_READ|PROT_WRITE, MAP_PRIVATE));
 
-      if (brk != (char*)(MORECORE_FAILURE)) {
+      if (fst_brk != (char*)(MORECORE_FAILURE)) {
 
         /* We do not need, and cannot use, another sbrk call to find end */
-        snd_brk = brk + size;
+        snd_brk = fst_brk + size;
 
         /*
            Record that we no longer have a contiguous sbrk region.
@@ -3154,14 +3154,14 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
   }
 #endif
 
-  if (brk != (char*)(MORECORE_FAILURE)) {
+  if (fst_brk != (char*)(MORECORE_FAILURE)) {
     av->sbrked_mem += size;
 
     /*
       If MORECORE extends previous space, we can likewise extend top size.
     */
 
-    if (brk == old_end && snd_brk == (char*)(MORECORE_FAILURE)) {
+    if (fst_brk == old_end && snd_brk == (char*)(MORECORE_FAILURE)) {
       set_head(old_top, (size + old_size) | PREV_INUSE);
     }
 
@@ -3188,7 +3188,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
       front_misalign = 0;
       end_misalign = 0;
       correction = 0;
-      aligned_brk = brk;
+      aligned_brk = fst_brk;
 
       /*
         If MORECORE returns an address lower than we have seen before,
@@ -3198,7 +3198,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
         malloc or by other threads.  We cannot guarantee to detect
         these in all cases, but cope with the ones we do detect.
       */
-      if (contiguous(av) && old_size != 0 && brk < old_end) {
+      if (contiguous(av) && old_size != 0 && fst_brk < old_end) {
         set_noncontiguous(av);
       }
 
@@ -3211,11 +3211,11 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
            stats reporting.
         */
         if (old_size != 0)
-          av->sbrked_mem += brk - old_end;
+          av->sbrked_mem += fst_brk - old_end;
 
         /* Guarantee alignment of first new chunk made from this space */
 
-        front_misalign = (INTERNAL_SIZE_T)chunk2mem(brk) & MALLOC_ALIGN_MASK;
+        front_misalign = (INTERNAL_SIZE_T)chunk2mem(fst_brk) & MALLOC_ALIGN_MASK;
         if (front_misalign > 0) {
 
           /*
@@ -3238,7 +3238,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
         correction += old_size;
 
         /* Extend the end address to hit a page boundary */
-        end_misalign = (INTERNAL_SIZE_T)(brk + size + correction);
+        end_misalign = (INTERNAL_SIZE_T)(fst_brk + size + correction);
         correction += ((end_misalign + pagemask) & ~pagemask) - end_misalign;
 
         assert(correction >= 0);
@@ -3252,7 +3252,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
           correction = 0;
           snd_brk = (char*)(MORECORE(0));
         }
-        else if (snd_brk < brk) {
+        else if (snd_brk < fst_brk) {
           /*
             If the second call gives noncontiguous space even though
             it says it won't, the only course of action is to ignore
@@ -3265,7 +3265,7 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
             there is no reliable way to detect a noncontiguity
             producing a forward gap for the second call.
           */
-          snd_brk = brk + size;
+          snd_brk = fst_brk + size;
           correction = 0;
           set_noncontiguous(av);
         }
@@ -3275,12 +3275,12 @@ static Void_t* sYSMALLOc(nb, av) INTERNAL_SIZE_T nb; mstate av;
       /* handle non-contiguous cases */
       else {
         /* MORECORE/mmap must correctly align */
-        assert(aligned_OK(chunk2mem(brk)));
+        assert(aligned_OK(chunk2mem(fst_brk)));
 
         /* Find out current end of memory */
         if (snd_brk == (char*)(MORECORE_FAILURE)) {
           snd_brk = (char*)(MORECORE(0));
-          av->sbrked_mem += snd_brk - brk - size;
+          av->sbrked_mem += snd_brk - fst_brk - size;
         }
       }
 
@@ -4312,7 +4312,7 @@ Void_t* mEMALIGn(alignment, bytes) size_t alignment; size_t bytes;
   INTERNAL_SIZE_T nb;             /* padded  request size */
   char*           m;              /* memory returned by malloc call */
   mchunkptr       p;              /* corresponding chunk */
-  char*           brk;            /* alignment point within p */
+  char*           abrk;           /* alignment point within p */
   mchunkptr       newp;           /* chunk to return */
   INTERNAL_SIZE_T newsize;        /* its size */
   INTERNAL_SIZE_T leadsize;       /* leading space before alignment point */
@@ -4363,13 +4363,13 @@ Void_t* mEMALIGn(alignment, bytes) size_t alignment; size_t bytes;
       total room so that this is always possible.
     */
 
-    brk = (char*)mem2chunk((PTR_UINT)(((PTR_UINT)(m + alignment - 1)) &
+    abrk = (char*)mem2chunk((PTR_UINT)(((PTR_UINT)(m + alignment - 1)) &
                            -((signed long) alignment)));
-    if ((CHUNK_SIZE_T)(brk - (char*)(p)) < MINSIZE)
-      brk += alignment;
+    if ((CHUNK_SIZE_T)(abrk - (char*)(p)) < MINSIZE)
+      abrk += alignment;
 
-    newp = (mchunkptr)(void*)brk;
-    leadsize = brk - (char*)(p);
+    newp = (mchunkptr)(void*)abrk;
+    leadsize = abrk - (char*)(p);
     newsize = chunksize(p) - leadsize;
 
     /* For mmapped chunks, just adjust offset */
