@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source: /usr/local/cvsroot/unixlib/source/c/memchr,v $
- * $Date: 1998/06/25 22:02:47 $
- * $Revision: 1.5 $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/memchr.c,v $
+ * $Date: 2001/01/29 15:10:18 $
+ * $Revision: 1.2 $
  * $State: Exp $
- * $Author: unixlib $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: memchr,v 1.5 1998/06/25 22:02:47 unixlib Exp $";
+static const char rcs_id[] = "$Id: memchr.c,v 1.2 2001/01/29 15:10:18 admin Exp $";
 #endif
 
 #include <string.h>
@@ -18,7 +18,7 @@ void *
 memchr (register const void *s, int c_, register size_t n)
 
 {
-  register unsigned char *_s = (unsigned char *) s;
+  register unsigned char *_s = (unsigned char *)(int) s;
   register char c = (char) c_;
 
   while (n & 0x07)
